--- a/frontend/src/app/components/pages/colaboradores/cadastro-colaboradores/cadastro-colaboradores.component.html
+++ b/frontend/src/app/components/pages/colaboradores/cadastro-colaboradores/cadastro-colaboradores.component.html
@@ -53,7 +53,7 @@
                 <span class="error" id="passwordError"></span>
     
                 <button type="button"
-                    class=""
+                    class="botao-cadastro"
                     onclick="validateForm()">Cadastrar</button>
             </form>
     
