ajustes de html e css para melhor funcionalidade, pagina quase pronta

--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.css
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.css
@@ -67,12 +67,15 @@ h4{
 }
 
 
-
-th p{
+th {
+  p{
+  display: inline-flex;
   padding-inline: 1.1em;
   font-size: small;
   font-weight: bold;
   text-align: center;
+  float: right;
+  }
 }
 
 .radioOpcao{
