--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
@@ -14,6 +14,17 @@
       <p>Avalia a satisfação dos colaboradores no ambiente profissional, focando em aspectos como gestão interna,<br />
         benefícios, cultura organizacional e oportunidades de crescimento.</p>
 
+
+
+      <!--
+        <h4>Benefícios</h4>
+        <h4>Cultura Organizacional</h4>
+        <h4>Oportunidades de Crescimento</h4>
+      -->
+
+
+      <h4>Gestão Interna</h4> <!-- Fazer a coisa de repetir titulo aqui -->
+
       <div class="i-s">
         <div class="icones">
           <!--https://icons.getbootstrap.com/icons/emoji-laughing/-->
@@ -26,48 +37,26 @@
 
 
 
-      <h4>Gestão Interna</h4>
-      <!--
-        <h4>Benefícios</h4>
-        <h4>Cultura Organizacional</h4>
-        <h4>Oportunidades de Crescimento</h4>
-      -->
-
-      <!--
       <table>
         <tr>
-          <th>Company</th>
-          <th>Contact</th>
-          <th>Country</th>
-        </tr>
-        <tr>
-          <td>Alfreds Futterkiste</td>
-          <td>Maria Anders</td>
-          <td>Germany</td>
-        </tr>
-        <tr>
-          <td>Centro comercial Moctezuma</td>
-          <td>Francisco Chang</td>
-          <td>Mexico</td>
-        </tr>
-      </table>
-      -->
-
-      <table>
-        <tr>
-          <!-- <th>Oie</th>  Fazer a coisa de repetir titulo aqui -->
-          <th><p>Concordo<br /> muito</p></th>
-          <th><p>Concordo</p></th>
-          <th><p>Indiferente<br />/Não sei</p></th>
-          <th><p>Discordo</p></th>
-          <th><p>Discordo<br /> Muito</p></th>
+          <th></th>
+          <th>
+            <p>Concordo<br /> muito</p>
+            <p>Concordo</p>
+            <p>Indiferente<br />/Não sei</p>
+            <p>Discordo</p>
+            <p>Discordo<br /> Muito</p>
+          </th>
         </tr>
         <tr class="tabela" *ngFor="let pergunta of perguntas; let i = index">
           <td>
-              <label class="pergunta"><p>{{ pergunta }}</p></label>
+            <label class="pergunta">
+              <p>{{ pergunta }}</p>
+            </label>
           </td>
           <td class="radio" *ngFor="let _ of valores; let j = index">
-              <input class="radioOpcao" type="radio" [name]="'radioOpcao' + (j + 1)" [value]="5 - j" id="{{ 'pergunta' + i + 'opcao' + j }}">
+            <input class="radioOpcao" type="radio" [name]="'radioOpcao' + (j + 1)" [value]="5 - j"
+              id="{{ 'pergunta' + i + 'opcao' + j }}">
           </td>
         </tr>
       </table>
@@ -75,35 +64,22 @@
 
 
 
+        <div id="SP" class="tabcontent" [hidden]="!openSP">
+          <h3>Satisfação Pessoal</h3>
+          <p>Explora aspectos a respeito da qualidade de vida pessoal que podem influenciar o equilíbrio trabalho-vida,
+            como
+            saúde, autocuidado, relacionamentos no ambiente doméstico, tempo de descanso e atividades de lazer.</p>
 
-<!--
-      <div class="row tabela" *ngFor="let pergunta of perguntas; let i = index">
-        <div class="conteudo">
-          <label class="col pergunta">
-            <p>{{ pergunta }}</p>
-          </label>
-          <div class="col container radio" *ngFor="let _ of valores; let j = index">
-            <input class="radioOpcao" type="radio" [name]="'radioOpcao' + (j + 1)" [value]="5 - j" id="{{ 'pergunta' + i + 'opcao' + j }}">
-          </div>
         </div>
+
+        <div id="RI" class="tabcontent" [hidden]="!openRI">
+          <h3>Relações Interpessoais</h3>
+          <p>Avalia a qualidade das relações no trabalho e na vida pessoal, com foco em comunicação, colaboração e
+            suporte
+            social.</p>
+
+        </div> <!-- LEMBRETE: Colocar em métodos-->
+
       </div>
-    -->
-
-      <div id="SP" class="tabcontent" [hidden]="!openSP">
-        <h3>Satisfação Pessoal</h3>
-        <p>Explora aspectos a respeito da qualidade de vida pessoal que podem influenciar o equilíbrio trabalho-vida,
-          como
-          saúde, autocuidado, relacionamentos no ambiente doméstico, tempo de descanso e atividades de lazer.</p>
-
-      </div>
-
-      <div id="RI" class="tabcontent" [hidden]="!openRI">
-        <h3>Relações Interpessoais</h3>
-        <p>Avalia a qualidade das relações no trabalho e na vida pessoal, com foco em comunicação, colaboração e suporte
-          social.</p>
-
-      </div> <!-- LEMBRETE: Colocar em métodos-->
 
     </div>
-
-  </div>
