--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
@@ -18,7 +18,7 @@
         <h4>Cultura Organizacional</h4>
         <h4>Oportunidades de Crescimento</h4>
       -->
-      <h4>Gestão Interna</h4> <!-- Fazer a coisa de repetir titulo aqui -->
+      <h4></h4> 
 
       <div class="icones">
         <!--https://icons.getbootstrap.com/icons/emoji-laughing/-->
@@ -40,14 +40,59 @@
             <p>Discordo<br /> Muito</p>
           </th>
         </tr>
-        <tr class="tabela" *ngFor="let pergunta of perguntas; let i = index">
+        
+          <h4>Gestão Interna</h4>
+        
+        <tr class="tabela" *ngFor="let pergunta of perguntasST1; let i = index">
           <td>
             <label class="pergunta">
               <p>{{ pergunta }}</p>
             </label>
           </td>
-          <td class="btn-group" role="group" *ngFor="let _ of valores; let j = index">
-            <input class="radioOpcao" type="radio" [name]="'pergunta' + i" [value]="5 - j" id="{{ 'pergunta' + i + 'opcao' + j }}">
+          <td class="radio btn-group" role="group" *ngFor="let _ of valores; let j = index">
+            <input class="radioOpcao" type="radio" [name]="'perguntasST1' + i" [value]="5 - j" id="{{ 'pergunta' + i + 'opcao' + j }}">
+          </td>
+        </tr>
+        <tr>
+          <th><h4>Benefícios</h4></th>
+          <th class="s"></th>
+        </tr>
+        <tr class="tabela" *ngFor="let pergunta of perguntasST2; let i = index">
+          <td>
+            <label class="pergunta">
+              <p>{{ pergunta }}</p>
+            </label>
+          </td>
+          <td class="radio btn-group" role="group" *ngFor="let _ of valores; let j = index">
+            <input class="radioOpcao" type="radio" [name]="'perguntasSs' + i" [value]="5 - j" id="{{ 'pergunta' + i + 'opcao' + j }}">
+          </td>
+        </tr>
+        <tr>
+          <th><h4>Cultura Organizacional</h4></th>
+          <th class="s"></th>
+        </tr>
+        <tr class="tabela" *ngFor="let pergunta of perguntasST3; let i = index">
+          <td>
+            <label class="pergunta">
+              <p>{{ pergunta }}</p>
+            </label>
+          </td>
+          <td class="radio btn-group" role="group" *ngFor="let _ of valores; let j = index">
+            <input class="radioOpcao" type="radio" [name]="'perguntasST3' + i" [value]="5 - j" id="{{ 'pergunta' + i + 'opcao' + j }}">
+          </td>
+        </tr>
+        <tr>
+          <th><h4>Oportunidades de Crescimento</h4></th>
+          <th class="s"></th>
+        </tr>
+        <tr class="tabela" *ngFor="let pergunta of perguntasST4; let i = index">
+          <td>
+            <label class="pergunta">
+              <p>{{ pergunta }}</p>
+            </label>
+          </td>
+          <td class="radio btn-group" role="group" *ngFor="let _ of valores; let j = index">
+            <input class="radioOpcao" type="radio" [name]="'perguntasST4' + i" [value]="5 - j" id="{{ 'pergunta' + i + 'opcao' + j }}">
           </td>
         </tr>
       </table>
