--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
@@ -10,29 +10,24 @@
     </div>
 
     <div id="ST" class="tabcontent" [hidden]="!openST">
-      <h3>Satisfação no Trabalho</h3>
-      <p>Avalia a satisfação dos colaboradores no ambiente profissional, focando em aspectos como gestão interna,<br />
-        benefícios, cultura organizacional e oportunidades de crescimento.</p>
-      <!--
-        <h4>Benefícios</h4>
-        <h4>Cultura Organizacional</h4>
-        <h4>Oportunidades de Crescimento</h4>
-      -->
-      <h4></h4> 
 
-      <div class="icones">
         <!--https://icons.getbootstrap.com/icons/emoji-laughing/-->
-        <i class="bi bi-emoji-laughing"></i>
-        <i class="bi bi-emoji-smile"></i>
-        <i class="bi bi-emoji-neutral"></i>
-        <i class="bi bi-emoji-frown"></i>
-        <i class="bi bi-emoji-angry"></i>
-      </div>
-
+       
       <table>
-        <tr>
-          <th></th>
+        <tr class="linha1">
+          <th><h3>Satisfação no Trabalho</h3></th>
           <th>
+            <i class="bi bi-emoji-laughing"></i>
+            <i class="bi bi-emoji-smile"></i>
+            <i class="bi bi-emoji-neutral"></i>
+            <i class="bi bi-emoji-frown"></i>
+            <i class="bi bi-emoji-angry"></i>
+          </th>
+        </tr>
+        <tr class="linha2">
+          <th class="descricao"><p>Avalia a satisfação dos colaboradores no ambiente profissional, focando em aspectos como gestão interna, <br />
+              benefícios, cultura organizacional e oportunidades de crescimento.</p></th>
+          <th class="satisfacao">
             <p>Concordo<br /> muito</p>
             <p>Concordo</p>
             <p>Indiferente<br />/Não sei</p>
@@ -40,10 +35,10 @@
             <p>Discordo<br /> Muito</p>
           </th>
         </tr>
-        
-          <h4>Gestão Interna</h4>
-        
-        <tr class="tabela" *ngFor="let pergunta of perguntasST1; let i = index">
+        <tr class="linha-t">
+          <th><h4>Gestão Interna</h4></th>
+        </tr>
+        <tr *ngFor="let pergunta of perguntasST1; let i = index">
           <td>
             <label class="pergunta">
               <p>{{ pergunta }}</p>
@@ -53,9 +48,8 @@
             <input class="radioOpcao" type="radio" [name]="'perguntasST1' + i" [value]="5 - j" id="{{ 'pergunta' + i + 'opcao' + j }}">
           </td>
         </tr>
-        <tr>
+        <tr class="linha-t">
           <th><h4>Benefícios</h4></th>
-          <th class="s"></th>
         </tr>
         <tr class="tabela" *ngFor="let pergunta of perguntasST2; let i = index">
           <td>
@@ -67,9 +61,8 @@
             <input class="radioOpcao" type="radio" [name]="'perguntasSs' + i" [value]="5 - j" id="{{ 'pergunta' + i + 'opcao' + j }}">
           </td>
         </tr>
-        <tr>
+        <tr class="linha-t">
           <th><h4>Cultura Organizacional</h4></th>
-          <th class="s"></th>
         </tr>
         <tr class="tabela" *ngFor="let pergunta of perguntasST3; let i = index">
           <td>
@@ -81,9 +74,8 @@
             <input class="radioOpcao" type="radio" [name]="'perguntasST3' + i" [value]="5 - j" id="{{ 'pergunta' + i + 'opcao' + j }}">
           </td>
         </tr>
-        <tr>
+        <tr class="linha-t">
           <th><h4>Oportunidades de Crescimento</h4></th>
-          <th class="s"></th>
         </tr>
         <tr class="tabela" *ngFor="let pergunta of perguntasST4; let i = index">
           <td>
