Ajuste no type da senha de login e no endpoint de visualização dos usuários

--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -27,7 +27,7 @@
     <div>
       <input
         name="senha"
-        type="senha"
+        type="password"
         id="senha"
         autocomplete="on"
         placeholder="Senha"
