--- a/frontend/src/app/components/pages/login/login.component.css
+++ b/frontend/src/app/components/pages/login/login.component.css
@@ -6,8 +6,8 @@
     justify-content: center;
     width: 100%;
     height: 100vh;
-    background: rgb(156,205,219);
-    background: linear-gradient(0deg, rgba(156,205,219,1) 0%, rgba(87,144,171,1) 50%, rgba(6,68,105,1) 100%);
+    background: rgb(156, 205, 219);
+    background: linear-gradient(0deg, rgba(156, 205, 219, 1) 0%, rgba(87, 144, 171, 1) 50%, rgba(6, 68, 105, 1) 100%);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
 }
 
@@ -30,7 +30,8 @@
     margin: 30px;
 }
 
-.form-login input[type="email"], input[type="senha"] {
+.form-login input[type="email"],
+input[type="password"] {
     width: 100%;
     height: 40px;
     margin: 10px 0 0px 0;
@@ -53,7 +54,7 @@
     padding: 7px 3px 3px 3px;
     background-color: rgb(231, 179, 179);
     font-size: 10px;
-    border-bottom-left-radius: 5px; 
+    border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
 
@@ -101,4 +102,3 @@
     background-color: #072D44;
     color: white;
 }
-  
